Added tests, docker and mongo
